--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@tsparticles/slim": "^3.3.0",
     "autoprefixer": "10.4.15",
     "clsx": "^2.1.0",
+    "encoding": "^0.1.13",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.18.0",
     "next": "13.4.15",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-animated-numbers": "^0.16.0",
